test-components/src/snapshots/snapshot_component_value@dynamic_scene_root.snap
---
source: src/lib.rs
expression: serializer
snapshot_kind: text
---
{
  "bevy_scene::components::DynamicSceneRoot": {
    "Weak": {
      "Uuid": {
        "uuid": "97128bb1-2588-480b-bdc6-87b4adbec477"
      }
    }
  }
}
