test-components/src/snapshots/snapshot_component_value@environment_map_light.snap
---
source: src/lib.rs
expression: serializer
snapshot_kind: text
---
{
  "bevy_light::probe::EnvironmentMapLight": {
    "diffuse_map": {
      "Uuid": "97128bb1-2588-480b-bdc6-87b4adbec477"
    },
    "specular_map": {
      "Uuid": "97128bb1-2588-480b-bdc6-87b4adbec477"
    },
    "intensity": 0.0,
    "rotation": [
      0.0,
      0.0,
      0.0,
      1.0
    ],
    "affects_lightmapped_mesh_diffuse": true
  }
}
