test-components/src/snapshots/snapshot_component_value@frustum.snap
---
source: src/lib.rs
expression: serializer
snapshot_kind: text
---
{
  "bevy_camera::primitives::Frustum": {}
}
