test-components/src/snapshots/snapshot_component_value@inherited_visibility.snap
---
source: src/lib.rs
expression: serializer
snapshot_kind: text
---
{
  "bevy_camera::visibility::InheritedVisibility": false
}
