test-components/src/snapshots/snapshot_component_value@key_too_long.snap
---
source: src/lib.rs
expression: serializer
snapshot_kind: text
---
{
  "test_components::ThisIsOverThePythonKeyLengthLimitForBlenderProperties": {
    "are_you_feeling_it_now_mr_krabs": true,
    "im_ready_im_ready_im_ready": "Spongebob"
  }
}
