test-components/src/snapshots/snapshot_component_value@light_probe.snap
---
source: src/lib.rs
expression: serializer
snapshot_kind: text
---
{
  "bevy_light::probe::LightProbe": {}
}
