test-components/src/snapshots/snapshot_component_value@manual_texture_view_handle.snap
---
source: src/lib.rs
expression: serializer
snapshot_kind: text
---
{
  "bevy_render::camera::manual_texture_view::ManualTextureViewHandle": 0
}
